[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/props/streetligths_outline.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/props/streetlights_fill.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/props/streetlights_light.png" type="Texture" id=3]
[ext_resource path="res://source/utils/day_night_utils/day_night_modulate.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sprites/stripes.png" type="Texture" id=5]
[ext_resource path="res://source/scenes/props/streetlight.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26, 134.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29, 36.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 100.5, 44.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 120.5, 49 )

[node name="Streetlight" type="YSort"]
script = ExtResource( 6 )

[node name="Line2" type="Node2D" parent="."]
position = Vector2( 82, -33 )

[node name="StreetlightsFill" type="Sprite" parent="Line2"]
modulate = Color( 0.207843, 0.168627, 0.258824, 1 )
position = Vector2( 0, -143 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="Lights" type="Node2D" parent="Line2"]

[node name="RedLight" type="Sprite" parent="Line2/Lights"]
self_modulate = Color( 0.705882, 0.321569, 0.321569, 1 )
show_behind_parent = true
position = Vector2( 8, -152 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="YellowLight" type="Sprite" parent="Line2/Lights"]
self_modulate = Color( 0.929412, 0.882353, 0.619608, 1 )
position = Vector2( 1, -138 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="GreenLight" type="Sprite" parent="Line2/Lights"]
self_modulate = Color( 0.541176, 0.690196, 0.376471, 1 )
position = Vector2( -9, -114 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="DayNightModulate" parent="Line2/Lights" instance=ExtResource( 4 )]
night_color = Color( 2, 2, 2, 1 )

[node name="StreetligthsOutline" type="Sprite" parent="Line2"]
position = Vector2( -1.15, -92.9 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="Stripes" type="Sprite" parent="."]
position = Vector2( -139, 3 )
scale = Vector2( 0.5, 0.45 )
texture = ExtResource( 5 )
centered = false

[node name="Line1" type="Node2D" parent="."]
position = Vector2( -41, 121 )

[node name="StreetlightsFill" type="Sprite" parent="Line1"]
modulate = Color( 0.207843, 0.168627, 0.258824, 1 )
position = Vector2( -3, -145 )
scale = Vector2( -0.7, 0.7 )
z_as_relative = false
texture = ExtResource( 2 )

[node name="Lights" type="Node2D" parent="Line1"]

[node name="DayNightModulate" parent="Line1/Lights" instance=ExtResource( 4 )]

[node name="RedLight" type="Sprite" parent="Line1/Lights"]
self_modulate = Color( 0.705882, 0.321569, 0.321569, 1 )
show_behind_parent = true
position = Vector2( -11, -153.9 )
rotation = 3.14159
scale = Vector2( 0.7, -0.7 )
texture = ExtResource( 3 )

[node name="YellowLight" type="Sprite" parent="Line1/Lights"]
self_modulate = Color( 0.929412, 0.882353, 0.619608, 1 )
position = Vector2( -4, -138.9 )
rotation = 3.14159
scale = Vector2( 0.7, -0.7 )
texture = ExtResource( 3 )

[node name="GreenLight" type="Sprite" parent="Line1/Lights"]
self_modulate = Color( 0.541176, 0.690196, 0.376471, 1 )
position = Vector2( 6, -116.9 )
rotation = 3.14159
scale = Vector2( 0.5, -0.5 )
texture = ExtResource( 3 )

[node name="StreetligthsOutline" type="Sprite" parent="Line1"]
position = Vector2( -1.15, -94.8 )
scale = Vector2( -0.7, 0.7 )
texture = ExtResource( 1 )

[node name="WrapArea" type="Area2D" parent="." groups=["streetlight"]]
collision_layer = 2
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="WrapArea"]
shape = SubResource( 1 )

[node name="StopArea" type="Area2D" parent="." groups=["obstacle"]]
collision_layer = 8
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StopArea"]
position = Vector2( -151, 85 )
shape = SubResource( 2 )
disabled = true

[node name="StopArea2" type="Area2D" parent="." groups=["obstacle"]]
collision_layer = 8
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StopArea2"]
position = Vector2( 170, -23 )
shape = SubResource( 2 )
disabled = true

[node name="PlayerStop" type="StaticBody2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerStop"]
position = Vector2( 10.5, 34.5 )
shape = SubResource( 3 )

[node name="PlayerDiscoveryArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDiscoveryArea"]
position = Vector2( 11.5, 33 )
shape = SubResource( 4 )

[connection signal="body_entered" from="PlayerDiscoveryArea" to="." method="_on_PlayerDiscoveryArea_body_entered"]
[connection signal="body_exited" from="PlayerDiscoveryArea" to="." method="_on_PlayerDiscoveryArea_body_exited"]
